# Tharunaditya_MinorProject_AI_Augmented_Hybrid_Fuzzer

./: .gitignore  LICENSE  README.md  Recommended_plots.md   debug_plot_data.py  neurofuzz.py  pyproject.toml  requirements.txt  run_baseline_afl.sh  run_baseline_cgc.sh
binaries/: cgc_cadet_00001.c  nf_demo.c  nf_img_processor.c  nf_pngdecode.c
comparison_results_proper/: COMPARISON_REPORT.md
configs/: analyze_png.yml  png_run_30min.yml  png_train_60min.yml  run_10min.yml  run_30min.yml  run_30min_proper.yml  run_5min.yml  run_60min.yml  run_img_processor.yml  train_10min.yml  train_30min.yml  train_30min_proper.yml  train_5min.yml  train_60min.yml  train_demo.yml  train_img_processor.yml
docs/: ARCHITECTURE.md  COMPONENTS.md  RESEARCH_GOALS.md  WORKFLOW.md
docs/components/: AFL_FUZZER.md  BINARY_ANALYZER.md  FEEDBACK_COLLECTOR.md  ORCHESTRATOR.md  RL_ENVIRONMENT.md  SEED_GENERATOR.md  SYMBOLIC_EXECUTOR.md  TARGET_CONFIG.md
scripts/: baseline_runner.py  generate_comparison_plots.py  multi_binary_runner.py  run_baseline_10min.sh  run_baseline_30min_proper.sh  run_baseline_60min.sh  run_comparative_study.sh  run_comparative_study_10min.sh  run_neuro_experiments.sh  run_proper_study_30min.sh
src/: __init__.py
src/analysis/: __init__.py  binary_analyzer.py  multicore_engine.py  symbolic_executor.py  target_config.py
tests/: test_config.py  test_environment.py  test_feedback_collector.py  test_orchestrator_run_fallback.py  test_resource_scheduling.py  test_safety_and_metrics.py  test_symex_backoff.py  test_symex_reward.py  test_target_config.py
(+17 files in other folders)
